Optimization mobile view (Fix #483)

--- a/dbas/static/css/basetemplate.sass
+++ b/dbas/static/css/basetemplate.sass
@@ -270,9 +270,6 @@ body.loading
   width: 100%
   height: 2px
 
-.preload-image
-  background: url(../images/icon_qmark_rev.png)
-
 #modal-checkbox-body
   padding: 0 15px 0 15px
 
